隐藏滚动条

--- a/public/testPage.html
+++ b/public/testPage.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <main data-n-id="20210906152030-96h489x"></main>
+    <!-- custom-z-getblockattr-7719993692093501='{"block_id":"20210906152030-96h489x","box":"20210816161940-zo21go1","id":"","name":"custom-config","path":"/20210816161944-cn1ky4x/20210805125620-rre8vhj.sy","root_id":"20210805125620-rre8vhj","type":"b","value":"{&amp;quot;source&amp;quot;:&amp;quot;console.log(`siYuan &amp;amp; RunKit`);//  hello world&amp;quot;,&amp;quot;inside&amp;quot;:&amp;quot;inside&amp;quot;,&amp;quot;title&amp;quot;:&amp;quot;&amp;quot;,&amp;quot;preamble&amp;quot;:&amp;quot;&amp;quot;,&amp;quot;version&amp;quot;:&amp;quot;16.x.x&amp;quot;}"}' -->
+
     <div
       class="iframe"
       updated="20210906152030"
       custom-config='{"source":"console.log(`siYuan &amp; RunKit`);//  hello world","inside":"inside","title":"","preamble":"","version":"16.x.x"}'
-      custom-z-getblockattr-7719993692093501='{"block_id":"20210906152030-96h489x","box":"20210816161940-zo21go1","id":"","name":"custom-config","path":"/20210816161944-cn1ky4x/20210805125620-rre8vhj.sy","root_id":"20210805125620-rre8vhj","type":"b","value":"{&amp;quot;source&amp;quot;:&amp;quot;console.log(`siYuan &amp;amp; RunKit`);//  hello world&amp;quot;,&amp;quot;inside&amp;quot;:&amp;quot;inside&amp;quot;,&amp;quot;title&amp;quot;:&amp;quot;&amp;quot;,&amp;quot;preamble&amp;quot;:&amp;quot;&amp;quot;,&amp;quot;version&amp;quot;:&amp;quot;16.x.x&amp;quot;}"}'
+      custom-z-ss-1848916795477618='{"block_id":"20210906152030-96h489x","box":"20210816161940-zo21go1","id":"","name":"custom-config","path":"/20210816161944-cn1ky4x/20210805125620-rre8vhj.sy","root_id":"20210805125620-rre8vhj","type":"b","value":"{&amp;quot;source&amp;quot;:&amp;quot;console.log(`siYuan &amp;amp; RunKit`);//  hello world&amp;quot;,&amp;quot;inside&amp;quot;:&amp;quot;inside&amp;quot;,&amp;quot;title&amp;quot;:&amp;quot;&amp;quot;,&amp;quot;preamble&amp;quot;:&amp;quot;&amp;quot;,&amp;quot;version&amp;quot;:&amp;quot;16.x.x&amp;quot;}"}'
       data-type="NodeWidget"
       data-n-id="20210906152030-96h489x"
     >
